# cargo-rustics

./: .gitignore  .rustics-dismissals.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rustics.toml
.github/workflows/: ci.yml  release.yml
crates/cargo-rustics/: Cargo.toml
crates/cargo-rustics/src/: cli.rs  clippy.rs  config.rs  coverage.rs  cross_file.rs  cross_file_coupling.rs  discover.rs  dismissal.rs  expanded.rs  main.rs  regression.rs  report.rs  runner.rs  since.rs  snapshot.rs  statistics.rs  unused.rs  workspace.rs
crates/cargo-rustics/src/commands/: ai_loop.rs  analyze.rs  doctor.rs  explain.rs  manual.rs  mod.rs  regression.rs  report.rs  rules.rs  unused.rs
crates/cargo-rustics/src/cross_file/: coupling.rs  efferent_coupling.rs  function_complexity.rs  impl_cohesion.rs  mod.rs  trait_impl_fanout.rs
crates/cargo-rustics/src/reporters/: ai.rs  console.rs  golden_tests.rs  json.rs  md.rs  mod.rs  sarif.rs
crates/cargo-rustics/src/unused/: apply.rs  mod.rs
crates/cargo-rustics/tests/: cli.rs  projects.rs
crates/rustics/: Cargo.toml
crates/rustics-build/: Cargo.toml
crates/rustics-build/src/: lib.rs
crates/rustics-lsp/: Cargo.toml
crates/rustics-lsp/src/: main.rs
crates/rustics-macros/: Cargo.toml
crates/rustics-macros/src/: lib.rs
crates/rustics-macros/tests/: measured.rs
crates/rustics-macros/tests/fixtures/fail/: bad_operator.rs  bad_operator.stderr  cc_over_threshold.rs  cc_over_threshold.stderr  unknown_metric.rs  unknown_metric.stderr
crates/rustics-macros/tests/fixtures/pass/: cc_under_threshold.rs  equals_shorthand.rs  multi_constraints.rs
crates/rustics-ra/: Cargo.toml  README.md
crates/rustics-ra/examples/: cc.rs  detect.rs  load_bench.rs
crates/rustics-ra/src/: cc.rs  lib.rs  unused.rs  workspace.rs
crates/rustics-ra/src/metrics/: coupling_graph.rs  efferent_coupling.rs  function_complexity.rs  impl_cohesion.rs  mod.rs
crates/rustics/src/: identifier.rs  input.rs  lib.rs  measurement.rs  metric.rs  scope.rs  visitor.rs
crates/rustics/src/metrics/: abstractness.rs  await_depth.rs  borrow_profile.rs  boxed_allocation_density.rs  clone_density.rs  closure_arity.rs  cognitive_complexity.rs  cyclomatic_complexity.rs  dyn_density.rs  early_return_density.rs  efferent_coupling.rs  format_density.rs  generic_arity.rs  halstead_volume.rs  impl_length.rs  impl_method_count.rs  impl_trait_fanout.rs  iterator_chain_length.rs  lcom4.rs  lifetime_arity.rs  macro_rules_arm_count.rs  match_arm_count.rs  maximum_nesting_level.rs  method_length.rs  mod.rs  npath_complexity.rs  number_of_parameters.rs  panic_density.rs  proc_macro_presence.rs  result_chain_depth.rs  rfc.rs  source_lines_of_code.rs  trait_default_impl_ratio.rs  trait_method_count.rs  unsafe_block_scope.rs  wmc.rs
crates/rustics/tests/: proptests.rs
doc/: ai-loop.md  calibration.md  manual.md
schemas/: rustics-config.schema.json  rustics-dismissals.schema.json  rustics-report.schema.json
tests/golden/ai_reporter/: with_violations.expected.yaml
tests/golden/json_reporter/: with_violations.expected.json
tests/projects/small-cli/: Cargo.toml
tests/projects/small-cli/src/: db.rs  error.rs  lib.rs  parser.rs  runner.rs  util.rs
