[workspace]
resolver = "2"
members = [
    "crates/rustics",
    "crates/cargo-rustics",
    "crates/rustics-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kojiwakamiya/cargo-rustics"
authors = ["cargo-rustics contributors"]
description = "Classical + Rust-specific code metrics for AI coding loops"
categories = ["development-tools", "command-line-utilities"]
keywords = ["metrics", "complexity", "static-analysis", "ai", "cargo-plugin"]

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
ignore = "0.4"
cargo_metadata = "0.19"
anyhow = "1"

# Internal
rustics = { path = "crates/rustics", version = "0.1.0" }

# Dev-only
proptest = "1"

# LSP — `crossbeam-channel` is a transitive dep of `lsp-server` and we
# never reference it by name; `serde` / `anyhow` are similarly unused
# directly (we use `serde_json` and `Box<dyn Error>` respectively).
lsp-server = "0.7"
lsp-types = "0.97"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
