[package]
name = "cargo-rustics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../../README.md"

[[bin]]
name = "cargo-rustics"
path = "src/main.rs"

[dependencies]
rustics.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ignore.workspace = true
cargo_metadata.workspace = true
anyhow.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
