[package]
name = "rustics-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "build.rs helper that fails the build when rustics lens thresholds are crossed"
categories.workspace = true
keywords.workspace = true
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
rustics.workspace = true
syn.workspace = true
ignore.workspace = true
