[package]
name = "rustics-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Language Server Protocol bridge for the rustics lens catalogue"
categories.workspace = true
keywords.workspace = true
readme = "../../README.md"

[[bin]]
name = "rustics-lsp"
path = "src/main.rs"

[dependencies]
rustics.workspace = true
syn.workspace = true
serde_json.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
