[package]
name = "rustics-ra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Layer 2 spike — rust-analyzer-backed lenses for cargo-rustics"
categories.workspace = true
keywords.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# rust-analyzer as a library — Layer 2 backend.
# All ra_ap_* crates date-version together; bump as a set when
# updating. APIs are explicitly unstable upstream.
ra_ap_hir = "0.0.331"
ra_ap_hir_def = "0.0.331"
ra_ap_hir_ty = "0.0.331"
ra_ap_ide = "0.0.331"
ra_ap_ide_db = "0.0.331"
ra_ap_load-cargo = "0.0.331"
ra_ap_paths = "0.0.331"
ra_ap_project_model = "0.0.331"
ra_ap_syntax = "0.0.331"
ra_ap_vfs = "0.0.331"

anyhow = { workspace = true }
