[package]
name = "rustics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
ra_ap_syntax = "0.0.331"
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true
